# auctioneer

./: .env.example  .gitignore  README.md  auctioneer.code-workspace
backend/: .flake8  .gitignore  pyproject.toml
backend/apps/common/: decorators.py  models.py  pagination.py  serializers.py  views.py
backend/apps/products/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_auto_20201108_0502.py  0003_auto_20201109_0128.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .eslintrc.json  .gitignore  .prettierrc  package.json  snowpack.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.scss  App.tsx  index.tsx  routes.tsx
frontend/src/AuthLayout/: AuthLayout.module.scss  AuthLayout.tsx
frontend/src/Dashboard/: Dashboard.tsx
frontend/src/Home/: Home.tsx  useProductsQuery.ts
frontend/src/LoadingApp/: index.tsx
frontend/src/Login/: Login.module.scss  Login.tsx
frontend/src/MainLayout/: Footer.tsx  Header.module.scss  Header.tsx  LogoutButton.tsx  MainLayout.module.scss  MainLayout.tsx
frontend/src/Product/: CreateProduct.tsx  ViewProduct.tsx  index.tsx
frontend/src/Register/: Register.tsx
frontend/src/shared/: 404Page.tsx  AnonOnlyRoute.tsx  ProtectedRoute.tsx  apiClient.ts  useAuthStore.ts  useInitializeAuth.ts  useUserStore.ts  utils.ts
frontend/src/shared/authService/: _client.ts  _tokenStore.ts  _tokenStore_v2.ts  index.ts  index_v2.ts
frontend/src/styles/: _base.scss  _colors.scss
