[tool.black]
line-length = 88
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.coverage.run]
omit = ["*/.venv/*"]

[tool.poetry]
name = "auctioneer-backend"
version = "0.1.0"
description = ""
authors = ["offstream <evangeline.niez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"
Pillow = "^8.0.0"
django-crispy-forms = "^1.9.2"
djangorestframework = "^3.12.2"
environs = {extras = ["django"], version = "^9.2.0"}
django-cors-headers = "^3.5.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
coverage = {extras = ["toml"], version = "^5.3"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
